@@ -3,6 +3,10 @@ changes may be omitted). For a complete list of changes, see the main
 changelog: https://github.com/wesnoth/wesnoth-old/blob/master/changelog
 
 Version 1.11.6+dev:
+ * Add-ons client:
+   * Report errors caused by faulty local .pbl files properly instead of presenting
+     them as network errors.
+
  * Language and i18n:
    * Updated translations: Lithuanian.
 
