@@ -1,4 +1,7 @@
 Version 1.11.6+dev:
+ * Add-ons client:
+   * Report errors caused by faulty local .pbl files properly instead of presenting
+     them as network errors.
  * Language and i18n:
    * Updated translations: Lithuanian
  * Lua API:
